Fix: fix contrast issues with calendar event indicator dots and fix margins so they are always centered

--- a/src/styles/CalDots.module.css
+++ b/src/styles/CalDots.module.css
@@ -1,3 +1,9 @@
+.CalDotDiv {
+  position: relative;
+}
+
 .CalDot {
-  position: absolute;
+  position: relative;
+  background-color: white;
+  mix-blend-mode: difference;
 }
